--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "this is test package",
   "main": "index.js",
   "bin": {
-    "mpm": "./bin/cli.js"
+    "tnp": "./bin/cli.js"
   },
   "scripts": {
     "tsd:reinstall": "tsd reinstall",
